Updated ServerImpl.java to fix failure
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@435879 13f79535-47bb-0310-9956-ffa450edef68